tests/baselines/reference/numeric-separator-literal-oil-nsl-od-err.errors.txt
numeric-separator-literal-oil-nsl-od-err.ts(33,4): error TS6188: Numeric separators are not allowed here.


==== numeric-separator-literal-oil-nsl-od-err.ts (1 errors) ====
    // Copyright (C) 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not be the last digit character of an
      OctalIntegerLiteral
    info: |
      NumericLiteralSeparator ::
        _
    
      OctalIntegerLiteral ::
        0o OctalDigits
        0O OctalDigits
    
      OctalDigits ::
        OctalDigit
        OctalDigits OctalDigit
        OctalDigits NumericLiteralSeparator OctalDigit
    
      OctalDigit :: one of
        0 1 2 3 4 5 6 7
    
    negative:
      phase: parse
      type: SyntaxError
    
    features: [numeric-separator-literal]
    ---*/
    
    
    0o0_
       ~
!!! error TS6188: Numeric separators are not allowed here.
    